--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,3 +17,9 @@ hr{
 .tasksList{
     display: flex;
 }
+.alignMent{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 30px;
+}
