--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -26,3 +26,11 @@ hr{
 .header-user{
     margin-bottom: 40px;
 }
+.pagesIcons{
+    margin-left: 20px;
+    transition: 0.3s;
+}
+.pagesIcons:hover{
+    background-color: rgb(207, 207, 207);
+    transition: 0.3s;
+}
