Adicionando logout e ícone de comentários

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -46,3 +46,8 @@ hr{
     background-color: black !important;
     width: 100px !important;
 }
+.commentBox{
+    position: relative;
+    float: right;
+    padding: 10px;
+}
