--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -51,3 +51,16 @@ hr{
     float: right;
     padding: 10px;
 }
+.backHeaders{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.backDiv{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-bottom:'30px'
+}
